change search Rarity to a selection

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,8 +18,15 @@
 	<option value='warrior'>Warrior</option>
       </select>
       <p>Mana:   <input type='text' name='manaCost' value='7'></p>
-      <p>Rarity: <input type='text' name='rarity' value='Legendary'></p>
-      <input type='submit'>
+      <p><label for='rarity'>Rarity: </label>
+      <select id='rarity' name='rarity'>
+	<option value='legendary'>Legendary</option>
+	<option value='epic'>Epic</option>
+	<option value='rare'>Rare</option>
+	<option value='common'>Common</option>
+	<option value='free'>Free</option>
+      </select></p>
+      <p><input type='submit'></p>
     </form>
   </body>
 </html>
