Mana accepts comma separated values

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
 	<option value='shaman'>Shaman</option>
 	<option value='warrior'>Warrior</option>
       </select>
-      <p>Mana:   <input type='text' name='manaCost' value='7'></p>
+      <p>Mana: <input type='text' name='manaCost' value='7'> (Accepts comma separated values: 7,8,9)</p>
       <p><label for='rarity'>Rarity: </label>
       <select id='rarity' name='rarity'>
 	<option value='legendary'>Legendary</option>
